[gd_scene load_steps=11 format=3 uid="uid://sxqo4anqircl"]

[ext_resource type="Script" path="res://level/Level1.gd" id="1_d5u6j"]
[ext_resource type="PackedScene" uid="uid://b6hs5jundy37l" path="res://entity/Player.tscn" id="2_kwpkc"]
[ext_resource type="AudioStream" uid="uid://belqocihrkdu3" path="res://ui/Ding - Sound Effect (HD).mp3" id="4_3g36g"]
[ext_resource type="AudioStream" uid="uid://dx16ytogeoeyg" path="res://ui/Victory Sound Effect.mp3" id="5_4ncvk"]
[ext_resource type="Texture2D" uid="uid://drk3o7blhhrfc" path="res://Tilemap/rock_packed.png" id="6_xnaym"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47mal"]
size = Vector2(1054.5, 95.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s8l4b"]
size = Vector2(300, 300)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lubsc"]
size = Vector2(300, 60)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_fpj3a"]
texture = ExtResource("6_xnaym")
texture_region_size = Vector2i(18, 18)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0

[sub_resource type="TileSet" id="TileSet_plp3d"]
sources/1 = SubResource("TileSetAtlasSource_fpj3a")

[node name="Level1" type="Node2D"]
script = ExtResource("1_d5u6j")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(649, 673)
collision_layer = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(102, -2)
shape = SubResource("RectangleShape2D_47mal")

[node name="Player" parent="." instance=ExtResource("2_kwpkc")]
position = Vector2(544, 592)
max_speed = 200.0
jump_power = 150.0

[node name="ScoreLabel" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 91
text = "Score: "

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(846, 426)
collision_layer = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_s8l4b")

[node name="DeathBox" type="Area2D" parent="."]
position = Vector2(99, 689)
collision_layer = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="DeathBox"]
shape = SubResource("RectangleShape2D_lubsc")

[node name="ProgressBar" type="ProgressBar" parent="."]
offset_left = 689.0
offset_top = 49.0
offset_right = 1240.0
offset_bottom = 76.0
max_value = 10.0

[node name="ScoreIncrease" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_3g36g")

[node name="Victory" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_4ncvk")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_plp3d")
format = 2
layer_0/tile_data = PackedInt32Array(2555983, 262145, 1, 2621519, 262145, 1, 2687055, 262145, 1, 2752591, 262145, 1, 2818127, 262145, 1, 2883663, 262145, 1, 2883662, 262145, 1, 2883661, 262145, 1, 2883660, 262145, 1, 2883659, 262145, 1, 2883658, 262145, 1, 2883657, 262145, 1, 2883656, 262145, 1, 2883655, 262145, 1, 2883654, 262145, 1, 2818118, 262145, 1, 2818117, 262145, 1, 2818116, 262145, 1, 2818115, 262145, 1, 2818114, 262145, 1, 2818113, 262145, 1, 2818112, 262145, 1, 2818111, 262145, 1, 2818110, 262145, 1, 2818109, 262145, 1, 2818108, 262145, 1, 2818107, 262145, 1, 2818106, 262145, 1, 2818105, 262145, 1, 2818104, 262145, 1, 2818103, 262145, 1, 2818102, 262145, 1, 2818101, 262145, 1, 2818100, 262145, 1, 2818099, 262145, 1, 2818098, 262145, 1, 2818097, 262145, 1, 2818096, 262145, 1, 2818095, 262145, 1, 2818094, 262145, 1, 2818093, 262145, 1, 2818092, 262145, 1, 2818091, 262145, 1, 2818090, 262145, 1, 2818089, 262145, 1, 2818088, 262145, 1, 2818087, 262145, 1, 2818086, 262145, 1, 2818085, 262145, 1, 2883620, 262145, 1, 2883619, 262145, 1, 2883618, 262145, 1, 2883617, 262145, 1, 2883616, 262145, 1, 2883615, 262145, 1, 2883614, 262145, 1, 2883613, 262145, 1, 2883612, 262145, 1, 2883611, 262145, 1, 2883610, 262145, 1, 2883609, 262145, 1, 2818073, 262145, 1, 2818072, 262145, 1, 2883608, 262145, 1, 2883607, 262145, 1, 2883606, 262145, 1, 2883605, 262145, 1, 2883604, 262145, 1, 2883603, 262145, 1, 2883602, 262145, 1, 2818066, 262145, 1, 2818065, 262145, 1, 2818064, 262145, 1, 2883600, 262145, 1, 2752528, 262145, 1, 2686992, 262145, 1, 2621456, 262145, 1, 2555920, 262145, 1, 2555919, 262145, 1, 2555918, 262145, 1, 2621454, 262145, 1, 2686990, 262145, 1, 2752526, 262145, 1, 2818062, 262145, 1, 2883598, 262145, 1, 2883599, 262145, 1, 2883601, 262145, 1, 2686991, 262145, 1, 2621455, 262145, 1, 2752527, 262145, 1, 2818063, 262145, 1, 2818067, 262145, 1, 2818068, 262145, 1, 2818069, 262145, 1, 2818070, 262145, 1, 2818071, 262145, 1, 2818074, 262145, 1, 2818075, 262145, 1, 2818076, 262145, 1, 2752540, 262145, 1, 2752541, 262145, 1, 2752542, 262145, 1, 2752543, 262145, 1, 2752544, 262145, 1, 2752545, 262145, 1, 2752546, 262145, 1, 2752547, 262145, 1, 2752548, 262145, 1, 2752549, 262145, 1, 2752550, 262145, 1, 2752551, 262145, 1, 2818084, 262145, 1, 2818083, 262145, 1, 2818082, 262145, 1, 2818081, 262145, 1, 2818080, 262145, 1, 2818079, 262145, 1, 2818078, 262145, 1, 2818077, 262145, 1, 2752539, 262145, 1, 2752538, 262145, 1, 2752537, 262145, 1, 2752536, 262145, 1, 2752535, 262145, 1, 2752534, 262145, 1, 2752533, 262145, 1, 2752532, 262145, 1, 2752531, 262145, 1, 2752530, 262145, 1, 2752529, 262145, 1, 2686993, 262145, 1, 2621458, 262145, 1, 2621459, 262145, 1, 2621460, 262145, 1, 2621461, 262145, 1, 2621462, 262145, 1, 2621463, 262145, 1, 2621464, 262145, 1, 2621465, 262145, 1, 2621466, 262145, 1, 2621467, 262145, 1, 2621468, 262145, 1, 2621469, 262145, 1, 2621470, 262145, 1, 2621471, 262145, 1, 2621472, 262145, 1, 2687008, 262145, 1, 2687007, 262145, 1, 2687006, 262145, 1, 2687005, 262145, 1, 2687004, 262145, 1, 2687003, 262145, 1, 2687002, 262145, 1, 2687001, 262145, 1, 2687000, 262145, 1, 2686999, 262145, 1, 2686998, 262145, 1, 2686997, 262145, 1, 2686996, 262145, 1, 2686995, 262145, 1, 2686994, 262145, 1, 2621457, 262145, 1, 2555921, 262145, 1, 2555922, 262145, 1, 2555923, 262145, 1, 2555924, 262145, 1, 2555925, 262145, 1, 2555926, 262145, 1, 2555927, 262145, 1, 2555928, 262145, 1, 2555929, 262145, 1, 2555930, 262145, 1, 2555931, 262145, 1, 2555932, 262145, 1, 2555933, 262145, 1, 2555934, 262145, 1, 2555935, 262145, 1, 2555936, 262145, 1, 2555937, 262145, 1, 2555938, 262145, 1, 2555939, 262145, 1, 2621475, 262145, 1, 2621476, 262145, 1, 2621477, 262145, 1, 2621478, 262145, 1, 2621479, 262145, 1, 2687015, 262145, 1, 2687014, 262145, 1, 2687013, 262145, 1, 2687012, 262145, 1, 2687011, 262145, 1, 2687010, 262145, 1, 2687009, 262145, 1, 2621473, 262145, 1, 2621474, 262145, 1, 2555940, 262145, 1, 2555941, 262145, 1, 2555942, 262145, 1, 2555943, 262145, 1, 2555944, 262145, 1, 2555945, 262145, 1, 2555946, 262145, 1, 2555947, 262145, 1, 2555948, 262145, 1, 2555949, 262145, 1, 2621485, 262145, 1, 2621486, 262145, 1, 2621487, 262145, 1, 2621488, 262145, 1, 2687024, 262145, 1, 2687023, 262145, 1, 2752558, 262145, 1, 2752557, 262145, 1, 2752556, 262145, 1, 2752555, 262145, 1, 2752554, 262145, 1, 2883621, 262145, 1, 2883622, 262145, 1, 2883623, 262145, 1, 2883624, 262145, 1, 2883625, 262145, 1, 2752560, 262145, 1, 2752559, 262145, 1, 2752553, 262145, 1, 2752561, 262145, 1, 2752562, 262145, 1, 2752563, 262145, 1, 2687020, 262145, 1, 2687019, 262145, 1, 2687018, 262145, 1, 2687017, 262145, 1, 2687021, 262145, 1, 2687022, 262145, 1, 2687016, 262145, 1, 2752552, 262145, 1, 2621481, 262145, 1, 2621482, 262145, 1, 2621483, 262145, 1, 2555950, 262145, 1, 2621480, 262145, 1, 2621484, 262145, 1, 2621489, 262145, 1, 2621490, 262145, 1, 2621491, 262145, 1, 2621492, 262145, 1, 2621493, 262145, 1, 2621494, 262145, 1, 2621495, 262145, 1, 2621496, 262145, 1, 2687033, 262145, 1, 2687034, 262145, 1, 2687035, 262145, 1, 2687036, 262145, 1, 2687037, 262145, 1, 2687038, 262145, 1, 2687039, 262145, 1, 2687040, 262145, 1, 2752577, 262145, 1, 2752578, 262145, 1, 2752579, 262145, 1, 2752580, 262145, 1, 2752581, 262145, 1, 2752582, 262145, 1, 2752583, 262145, 1, 2752584, 262145, 1, 2752585, 262145, 1, 2752586, 262145, 1, 2752587, 262145, 1, 2818123, 262145, 1, 2818122, 262145, 1, 2818121, 262145, 1, 2818120, 262145, 1, 2818119, 262145, 1, 2752576, 262145, 1, 2752575, 262145, 1, 2752574, 262145, 1, 2752573, 262145, 1, 2752572, 262145, 1, 2752571, 262145, 1, 2752570, 262145, 1, 2752569, 262145, 1, 2752568, 262145, 1, 2752567, 262145, 1, 2752566, 262145, 1, 2752565, 262145, 1, 2752564, 262145, 1, 2687025, 262145, 1, 2687026, 262145, 1, 2687031, 262145, 1, 2687032, 262145, 1, 2687027, 262145, 1, 2687028, 262145, 1, 2687029, 262145, 1, 2621497, 262145, 1, 2621498, 262145, 1, 2687030, 262145, 1, 2555952, 262145, 1, 2555951, 262145, 1, 2555953, 262145, 1, 2555954, 262145, 1, 2555955, 262145, 1, 2555957, 262145, 1, 2555958, 262145, 1, 2555959, 262145, 1, 2555956, 262145, 1, 2883626, 262145, 1, 2883627, 262145, 1, 2883628, 262145, 1, 2883629, 262145, 1, 2883630, 262145, 1, 2883631, 262145, 1, 2883632, 262145, 1, 2883633, 262145, 1, 2883634, 262145, 1, 2883635, 262145, 1, 2883636, 262145, 1, 2883637, 262145, 1, 2883638, 262145, 1, 2883639, 262145, 1, 2883640, 262145, 1, 2883641, 262145, 1, 2883642, 262145, 1, 2883643, 262145, 1, 2883651, 262145, 1, 2883650, 262145, 1, 2883649, 262145, 1, 2883648, 262145, 1, 2883647, 262145, 1, 2883646, 262145, 1, 2883645, 262145, 1, 2883644, 262145, 1, 2555960, 262145, 1, 2555961, 262145, 1, 2555965, 262145, 1, 2555966, 262145, 1, 2555967, 262145, 1, 2621503, 262145, 1, 2621502, 262145, 1, 2621501, 262145, 1, 2621500, 262145, 1, 2621499, 262145, 1, 2555963, 262145, 1, 2555962, 262145, 1, 2621504, 262145, 1, 2687041, 262145, 1, 2687042, 262145, 1, 2687043, 262145, 1, 2883652, 262145, 1, 2883653, 262145, 1, 2818124, 262145, 1, 2818125, 262145, 1, 2752589, 262145, 1, 2752590, 262145, 1, 2818126, 262145, 1, 2752588, 262145, 1, 2687053, 262145, 1, 2621517, 262145, 1, 2555982, 262145, 1, 2555981, 262145, 1, 2555980, 262145, 1, 2555979, 262145, 1, 2555978, 262145, 1, 2555977, 262145, 1, 2555976, 262145, 1, 2555975, 262145, 1, 2555974, 262145, 1, 2555973, 262145, 1, 2555972, 262145, 1, 2555971, 262145, 1, 2555970, 262145, 1, 2555969, 262145, 1, 2555968, 262145, 1, 2555964, 262145, 1, 2621505, 262145, 1, 2621506, 262145, 1, 2621507, 262145, 1, 2621508, 262145, 1, 2621509, 262145, 1, 2621510, 262145, 1, 2621511, 262145, 1, 2687048, 262145, 1, 2687049, 262145, 1, 2687050, 262145, 1, 2687051, 262145, 1, 2687052, 262145, 1, 2687044, 262145, 1, 2687045, 262145, 1, 2687046, 262145, 1, 2687047, 262145, 1, 2621512, 262145, 1, 2621513, 262145, 1, 2621514, 262145, 1, 2621515, 262145, 1, 2621516, 262145, 1, 2621518, 262145, 1, 2687054, 262145, 1)

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="DeathBox" to="." method="_on_death_box_body_entered"]
